--- a/configs/simple_scifi.yml
+++ b/configs/simple_scifi.yml
@@ -1,6 +1,6 @@
 generator_type: "simple_generator"
 model_name: "openai/gpt-4-32k"
-preamble: "You are an author who writes fiction. Your job is to expand the following list of prompts one by one to prose."
+preamble: "You are an author who writes fiction. Your job is to expand the following list of prompts one by one to prose. However, do not write it as a list."
 max_tokens_per_beat: 1500
 num_choices: 1
 seed: 1234
